# Pocket_FSM

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
doc/: UML.vsdx
example/: DigitalButton.cpp  DigitalButton.h  Output-VisualC++Refactoring.txt  PocketFsmDemo.cpp  PocketFsmDemo.sln  PocketFsmDemo.vcxproj  PocketFsmDemo.vcxproj.filters  PocketFsmExamples.sln
example/CombinationLock/: CombinationLock.cpp  CombinationLock.vcxproj  CombinationLock.vcxproj.filters  Lock.cpp  Lock.h
example/CombinationSafe/: CombinationLock.vcxproj  CombinationLock.vcxproj.filters  CombinationSafe.cpp  CombinationSafe.h  main.cpp
example/CombinationSafe - Nested/: CombinationSafe_Nested.cpp  CombinationSafe_Nested.h  CombinationSafe_Nested.vcxproj  CombinationSafe_Nested.vcxproj.filters  cpp.hint  main.cpp
example/DatingSim/: DatingSim.cpp  EmotionalState.cpp  LoveInterest.cpp  LoveInterest.h  SimplestStateMachine.vcxproj  SimplestStateMachine.vcxproj.filters
example/PocketFsmDemo/: DigitalButton.cpp  DigitalButton.h  PocketFsmDemo.cpp  PocketFsmDemo.vcxproj  PocketFsmDemo.vcxproj.filters
include/: pocket_fsm.h
